fix overflow in content-tab in info-panel in basic tool

--- a/app/assets/stylesheets/anew/info_panel.css.scss
+++ b/app/assets/stylesheets/anew/info_panel.css.scss
@@ -9,6 +9,8 @@ body{
   position: absolute;
   width: 301;
   top: 240px;
+  max-height: 300px;
+  overflow-y: auto;
   .tab {
     display: block;
     float: left;
@@ -18,6 +20,7 @@ body{
     background: #ff6633 url('/assets/iconInfoTab8.png') no-repeat 6px 4px;
   }
   .tab-content {
+    overflow-y: auto;
     float: left;
     text-align: left;
     width: 250px;
